Feat: correct image avatar
